--- a/2121_wave_cafe/index.html
+++ b/2121_wave_cafe/index.html
@@ -102,7 +102,7 @@ https://www.tooplate.com/view/2121-wave-cafe
                 </div> 
 
                 <div class="tm-list-item">          
-                  <img src="img/mucca.jpg" alt="Image" class="tm-list-item-img">
+                  <img src="img/nuovamucca.jpg" alt="Image" class="tm-list-item-img">
                   <div class="tm-black-bg tm-list-item-text">
                     <h3 class="tm-list-item-name">ICED COW<span class="tm-list-item-price">$10.25</span></h3>
                     <p class="tm-list-item-description">PROVA MUCCA</p>
